# ghostlog

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  schema.sql  tempo.yaml
examples/: basic_agent.py
ghostlog/: __init__.py
ghostlog/alerts/: notify.py
ghostlog/analysis/: ai.py
ghostlog/api/: main.py
ghostlog/core/: models.py  tracer.py
ghostlog/otel/: export.py
ghostlog/static/: dashboard.html  dashboard_updated.html
ghostlog/storage/: db.py
tests/: test_core.py
