[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ghostlog"
version = "0.1.0"
description = "AI Agent Incident Response Platform — every decision, logged and chainable."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "observability", "incident-response", "llm", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
ghostlog = "ghostlog.api.main:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ghostlog"
Issues   = "https://github.com/YOUR_USERNAME/ghostlog/issues"

[tool.hatch.build.targets.wheel]
packages = ["ghostlog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
